fix: Refactor social documentation for improved readability and apply white background to responsive elements

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -40,6 +40,10 @@ button {
   position: relative;
 }
 
+.white-background {
+  background-color: rgb(233, 233, 233);
+}
+
 .side-bar {
   z-index: 0;
   display: flex;
